--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
 
         h1:after{
-            content: "MYLOVEIT";
+            content: "MYLOVE-W";
             color: transparent;
             position: absolute;
             left: 0;
@@ -58,6 +58,6 @@
     </style>
 </head>
 <body>
-    <h1>MYLOVE.MS WANG</h1>
+    <h1>MYLOVE-W</h1>
 </body>
 </html>
